--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsonresume-theme-engineering",
+  "name": "jsonresume-theme-student",
   "version": "0.2.1",
-  "description": "JSON Resume theme for engineers",
+  "description": "JSON Resume theme for students and recent graduates",
   "keywords": [
     "jsonresume",
     "jsonresume-theme",
@@ -10,10 +10,10 @@
     "theme",
     "cv"
   ],
-  "author": "Sören König",
+  "author": "Ibrahim Alkhayatt",
   "repository": {
     "type": "git",
-    "url": "https://github.com/skoenig/jsonresume-theme-engineering"
+    "url": "https://github.com/barhoomi/jsonresume-theme-student"
   },
   "license": "MIT",
   "scripts": {
